Don't use removeLast()